# Car-Motorcycle-SPA-ManagementSystem-Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial.py
api/: __init__.py
core/: config.py  database.py
models/: base.py  client.py
repositories/: base.py
services/: base.py
tests/: conftest.py  test_main.py  test_structure.py
