[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend-system-auto-and-motorcycle-spa"
version = "0.1.0"
description = "A backend system built with Python and FastAPI to manage clients, vehicles, services, discounts, and payments for an auto and motorcycle spa"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Johan Esteban Arias Arboleda"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "repositories", "models", "core"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88